projects/backups/backup-config-files/stpi-proxy.virtual-labs.ac.in/vz/private/12237/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Fri Nov 23 15:48:13 2012
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#INPUT chain configuration
#Allow ongoing connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#Allow ping and other ICMP
-A INPUT -p icmp -j ACCEPT
#Allow incoming SSH connections
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
#Allow incoming connections to port 8080 or 3128
-A INPUT -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
#Allowing nrpe connection from nagios
-A INPUT -p tcp -m tcp --dport 5666 -j ACCEPT
#Allow loopback connections
-A INPUT -i lo -j ACCEPT
#Deny everthing else
-A INPUT -j REJECT
##
#FORWARD chain configuration
#Deny everything
-A FORWARD -j REJECT
#
#OUTPUT chain configuration
#Send everything
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Fri Nov 23 15:48:13 2012
